# signal-analizer

./: CMakeLists.txt  README.md  main.cpp  settings.json
analyzers/classes/ecdf/: README.md  config.json  ecdf.py  requirements.txt
analyzers/classes/rand/: README.md  config.json  rand.py
analyzers/classes/vae/: README.md  config.json  requirements.txt  vae.py
cmake/: FindQwt.cmake
config/: AbstractConfig.cpp  AbstractConfig.h  AnalyzerClassConfig.cpp  AnalyzerClassConfig.h  AnalyzerInstanceConfig.cpp  AnalyzerInstanceConfig.h  ApplicationConfig.cpp  ApplicationConfig.h  InitParam.cpp  InitParam.h  JsonKeys.h
core/controller/: AnalyzerInstancePropertiesDialog.cpp  AnalyzerInstancePropertiesDialog.h  CreateAnalyzerInstanceDialog.cpp  CreateAnalyzerInstanceDialog.h  CreateAnalyzerInstanceDialog.ui  HistoryDataSourceChooseDialog.cpp  HistoryDataSourceChooseDialog.h  HistoryDataSourceChooseDialog.ui  TimeIntervalSetupWidget.cpp  TimeIntervalSetupWidget.h  analyzer-widget.cpp  analyzer-widget.h  analyzer-widget.ui  main-widget.cpp  main-widget.h  main-widget.ui
core/model/: AnalyzerObserver.h  ClassLabel.cpp  ClassLabel.h  SignalPart.cpp  SignalPart.h  TimeInterval.h  analyzer-facade.cpp  analyzer-facade.h  analyzer.cpp  analyzer.h  event.cpp  event.h  events-model.cpp  events-model.h  general-analyzer.cpp  general-analyzer.h  py-object-ref.cpp  py-object-ref.h  scoped-python-interpreter.cpp  scoped-python-interpreter.h  signal-buffer.cpp  signal-buffer.h  signal-chunk.cpp  signal-chunk.h  signal-fragment.cpp  signal-fragment.h  signal-model.cpp  signal-model.h  signal-types.h  string-queue-model.cpp  string-queue-model.h
core/view/: SignalPlot.cpp  SignalPlot.h
network/: HistoryServerStub.cpp  HistoryServerStub.h
network/new/: HistoryData.cpp  HistoryData.h  HistoryDataCsvFile.cpp  HistoryDataCsvFile.h  HistoryDataOpcClient.cpp  HistoryDataOpcClient.h
player/controller/: PlayerChooseDialog.cpp  PlayerChooseDialog.h  PlayerChooseDialog.ui  PlayerControllerWidget.cpp  PlayerControllerWidget.h  PlayerControllerWidget.ui
player/model/: csv-signal-fragment-reader.cpp  csv-signal-fragment-reader.h  player-core.cpp  player-core.h
player/model/new/: Player.cpp  Player.h  csvPlayer.cpp  csvPlayer.h  opcPlayer.cpp  opcPlayer.h
